# tc397_freertos_smp

./: CMakeLists.txt  LICENSE  Lcf_Gnuc_Tricore_Tc.ld  Lcf_Tasking_Tricore_Tc.lsl  README.md  build.bat  main.c  tc1v1_6_2.bmhd.lsl  toolchain_tricore_hightec.cmake  toolchain_tricore_tasking.cmake
Libraries/Infra/Ssw/TC39B/Tricore/: Ifx_Ssw.h  Ifx_Ssw_Infra.c  Ifx_Ssw_Infra.h  Ifx_Ssw_Tc0.c  Ifx_Ssw_Tc1.c  Ifx_Ssw_Tc2.c  Ifx_Ssw_Tc3.c  Ifx_Ssw_Tc4.c  Ifx_Ssw_Tc5.c
Libraries/iLLD/TC39B/Tricore/Can/Std/: IfxCan.c
Libraries/iLLD/TC39B/Tricore/Cpu/Irq/: IfxCpu_Irq.c
Libraries/iLLD/TC39B/Tricore/Cpu/Std/: IfxCpu.c  IfxCpu.h
Libraries/iLLD/TC39B/Tricore/Ebu/BFlashSpansion/: IfxEbu_BFlashSpansion.c  IfxEbu_BFlashSpansion.h
Libraries/iLLD/TC39B/Tricore/Ebu/BFlashSt/: IfxEbu_BFlashSt.c  IfxEbu_BFlashSt.h
Libraries/iLLD/TC39B/Tricore/Ebu/Dram/: IfxEbu_Dram.c  IfxEbu_Dram.h
Libraries/iLLD/TC39B/Tricore/Ebu/Sram/: IfxEbu_Sram.c  IfxEbu_Sram.h
Libraries/iLLD/TC39B/Tricore/Ebu/Std/: IfxEbu.c  IfxEbu.h
Libraries/iLLD/TC39B/Tricore/Emem/Std/: IfxEmem.c  IfxEmem.h
Libraries/iLLD/TC39B/Tricore/Eray/Eray/: IfxEray_Eray.c
Libraries/iLLD/TC39B/Tricore/Eray/Std/: IfxEray.h
Libraries/iLLD/TC39B/Tricore/Evadc/Std/: IfxEvadc.h
Libraries/iLLD/TC39B/Tricore/Flash/Std/: IfxFlash.h
Libraries/iLLD/TC39B/Tricore/Gtm/Trig/: IfxGtm_Trig.c
Libraries/iLLD/TC39B/Tricore/Hspdm/Std/: IfxHspdm.c  IfxHspdm.h
Libraries/iLLD/TC39B/Tricore/Hssl/Hssl/: IfxHssl_Hssl.c
Libraries/iLLD/TC39B/Tricore/Hssl/Std/: IfxHssl.c
Libraries/iLLD/TC39B/Tricore/Mtu/Std/: IfxMtu.c
Libraries/iLLD/TC39B/Tricore/Pms/Std/: IfxPmsPm.c  IfxPmsPm.h
Libraries/iLLD/TC39B/Tricore/Port/Std/: IfxPort.c
Libraries/iLLD/TC39B/Tricore/Qspi/SpiMaster/: IfxQspi_SpiMaster.c  IfxQspi_SpiMaster.h
Libraries/iLLD/TC39B/Tricore/Qspi/Std/: IfxQspi.h
Libraries/iLLD/TC39B/Tricore/Rif/Rif/: IfxRif_Rif.c  IfxRif_Rif.h
Libraries/iLLD/TC39B/Tricore/Rif/Std/: IfxRif.c  IfxRif.h
Libraries/iLLD/TC39B/Tricore/Scu/Std/: IfxScuCcu.c  (+3 more)
Libraries/iLLD/TC39B/Tricore/_Impl/: IfxCan_cfg.c  IfxCan_cfg.h  IfxCif_cfg.c  IfxCif_cfg.h  IfxCpu_cfg.c  IfxCpu_cfg.h  IfxEbu_cfg.h  IfxEdsadc_cfg.h  IfxEmem_cfg.c  IfxEmem_cfg.h  IfxEray_cfg.c  IfxEray_cfg.h  IfxEvadc_cfg.c  IfxEvadc_cfg.h  IfxFlash_cfg.c  IfxFlash_cfg.h  IfxGlobal_cfg.h  IfxGtm_cfg.c  IfxGtm_cfg.h  IfxHspdm_cfg.c  IfxHspdm_cfg.h  IfxHssl_cfg.c  IfxHssl_cfg.h  IfxI2c_cfg.c  IfxI2c_cfg.h  IfxLmu_cfg.h  IfxMsc_cfg.c  IfxMsc_cfg.h  IfxMtu_cfg.c  IfxMtu_cfg.h  IfxPort_cfg.c  IfxPort_cfg.h  IfxPsi5_cfg.h  IfxQspi_cfg.c  IfxQspi_cfg.h  IfxRif_cfg.c  IfxRif_cfg.h  IfxScu_cfg.h  IfxSdmmc_cfg.h  IfxSent_cfg.h  (+6 more)
Libraries/iLLD/TC39B/Tricore/_PinMap/: IfxAsclin_PinMap.c  IfxAsclin_PinMap.h  IfxCan_PinMap.c  IfxCan_PinMap.h  IfxEdsadc_PinMap.c  IfxEdsadc_PinMap.h  IfxEray_PinMap.c  IfxEray_PinMap.h  IfxEvadc_PinMap.c  IfxEvadc_PinMap.h  IfxGtm_PinMap.c  IfxGtm_PinMap.h  IfxHspdm_PinMap.c  IfxHspdm_PinMap.h  IfxI2c_PinMap.c  IfxI2c_PinMap.h  IfxMsc_PinMap.c  IfxMsc_PinMap.h  IfxPms_PinMap.c  IfxPort_PinMap.c  IfxPort_PinMap.h  IfxPsi5_PinMap.c  IfxPsi5_PinMap.h  IfxQspi_PinMap.c  IfxQspi_PinMap.h  IfxRif_PinMap.c  IfxRif_PinMap.h  IfxScu_PinMap.c  IfxScu_PinMap.h  IfxSdmmc_PinMap.c  IfxSdmmc_PinMap.h  IfxSent_PinMap.c  IfxSent_PinMap.h
cstart/: bmhd.c  core.h  crt0-tc39x.c  cstart.c  cstart.h  cstart_tc1.c  cstart_tc1.h  cstart_tc2.c  cstart_tc2.h  cstart_tc3.c  cstart_tc3.h  cstart_tc4.c  cstart_tc4.h  cstart_tc5.c  cstart_tc5.h  sync_on_halt.c  trap.c
os/: FreeRTOSConfig.h  os_cfg.c
os/FreeRTOS-Kernel-10.4.3/: tasks.c
os/FreeRTOS-Kernel-10.4.3/portable/MemMang/: heap_4.c
os/FreeRTOS-Kernel-10.4.3/portable/TriCore/: port.c  port_tc3xx.h  port_tricore.h  portmacro.h
(+8 files in other folders)
